--- a/PalladiumDwh.Core/packages.config
+++ b/PalladiumDwh.Core/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
+  <package id="Hangfire.Core" version="1.7.9" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
+  <package id="Owin" version="1.0" targetFramework="net462" />
 </packages>
