--- a/PalladiumDwh.DWapi/packages.config
+++ b/PalladiumDwh.DWapi/packages.config
@@ -8,6 +8,7 @@
   <package id="Hangfire" version="1.7.9" targetFramework="net462" />
   <package id="Hangfire.Core" version="1.7.9" targetFramework="net462" />
   <package id="Hangfire.SqlServer" version="1.7.9" targetFramework="net462" />
+  <package id="Hangfire.StructureMap" version="2.0.1" targetFramework="net462" />
   <package id="jQuery" version="3.2.1" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net462" />
@@ -29,7 +30,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
   <package id="Respond" version="1.4.2" targetFramework="net462" />
-  <package id="StructureMap" version="4.6.0" targetFramework="net462" />
+  <package id="StructureMap" version="4.7.0" targetFramework="net462" />
   <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net462" />
   <package id="structuremap.web" version="4.0.0.315" targetFramework="net462" />
   <package id="StructureMap.WebApi2" version="3.0.4.125" targetFramework="net462" />
