--- a/PalladiumDwh.DWapi/PalladiumDwh.DWapi.csproj
+++ b/PalladiumDwh.DWapi/PalladiumDwh.DWapi.csproj
@@ -100,6 +100,10 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Quartz, Version=3.0.7.0, Culture=neutral, PublicKeyToken=f6b8c98a402cc8a4">
+      <HintPath>..\packages\Quartz.3.0.7\lib\net452\Quartz.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="StructureMap, Version=4.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\StructureMap.4.7.0\lib\net45\StructureMap.dll</HintPath>
     </Reference>
@@ -114,6 +118,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -242,6 +247,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\Messenger.cs" />
+    <Compile Include="Helpers\MessengerJob.cs" />
+    <Compile Include="Helpers\ProfileScheduler.cs" />
     <Compile Include="Models\Subscriber.cs" />
     <Compile Include="Models\Queues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
