--- a/PalladiumDwh.DWapi/packages.config
+++ b/PalladiumDwh.DWapi/packages.config
@@ -29,6 +29,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
+  <package id="Quartz" version="3.0.7" targetFramework="net462" />
   <package id="Respond" version="1.4.2" targetFramework="net462" />
   <package id="StructureMap" version="4.7.0" targetFramework="net462" />
   <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net462" />
