--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-
+    <section name="quartz" type="System.Configuration.NameValueSectionHandler, System, Version=1.0.5000.0,Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="PalladiumDwh.DWapi.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -48,7 +48,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -108,6 +108,27 @@
       </setting>
     </PalladiumDwh.DWapi.Properties.Settings>
   </applicationSettings>
+  <quartz>
+    <add key="quartz.scheduler.instanceName" value="DWAPICentralScheduler" />
+    <add key="quartz.scheduler.instanceId" value="AUTO" />
+
+    <add key="quartz.threadPool.type" value="Quartz.Simpl.SimpleThreadPool, Quartz" />
+    <add key="quartz.threadPool.threadCount" value="7" />
+    <add key="quartz.threadPool.threadPriority" value="Normal" />
+
+    <add key="quartz.jobStore.type" value="Quartz.Impl.AdoJobStore.JobStoreTX, Quartz" />
+    <add key="quartz.serializer.type" value="json" />
+    <add key="quartz.jobStore.dataSource" value="default" />
+    <add key="quartz.jobStore.tablePrefix" value="QRTZ_" />
+    <add key="quartz.jobStore.clustered" value="false" />
+    <add key="quartz.jobStore.lockHandler.type" value="Quartz.Impl.AdoJobStore.SimpleSemaphore, Quartz" />
+    <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.SqlServerDelegate, Quartz" />
+    <add key="quartz.dataSource.default.provider" value="SqlServer" />
+    <add key="quartz.jobStore.useProperties" value="false" />
+    <add key="quartz.jobStore.selectWithLockSQL" value="SELECT * FROM {0} LOCKS UPDLOCK WHERE LOCK_NAME = @ lockName" />
+    <add key="quartz.dataSource.default.connectionStringName" value="QDWAPICentral" />
+    <add key="quartz.dataSource.default.connectionString" value="Data Source=.\KOSKE14;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True" />
+  </quartz>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
