--- a/PalladiumDwh.DWapi/packages.config
+++ b/PalladiumDwh.DWapi/packages.config
@@ -5,10 +5,6 @@
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net462" />
   <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
-  <package id="Hangfire" version="1.7.9" targetFramework="net462" />
-  <package id="Hangfire.Core" version="1.7.9" targetFramework="net462" />
-  <package id="Hangfire.SqlServer" version="1.7.9" targetFramework="net462" />
-  <package id="Hangfire.StructureMap" version="2.0.1" targetFramework="net462" />
   <package id="jQuery" version="3.2.1" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net462" />
@@ -27,9 +23,10 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Modernizr" version="2.8.3" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
   <package id="Quartz" version="3.0.7" targetFramework="net462" />
+  <package id="Quartz.Serialization.Json" version="3.0.7" targetFramework="net462" />
   <package id="Respond" version="1.4.2" targetFramework="net462" />
   <package id="StructureMap" version="4.7.0" targetFramework="net462" />
   <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net462" />
