--- a/PalladiumDwh.Infrastructure.Tests/database.config
+++ b/PalladiumDwh.Infrastructure.Tests/database.config
@@ -1,7 +1,7 @@
 <connectionStrings>
   <add
     name="DWAPICentral"
-    connectionString="Data Source=.\koske14;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=41.206.32.54;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=hts;Password=c0nstella;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient" 
     />
 </connectionStrings>
