--- a/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
+++ b/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
@@ -112,6 +112,10 @@
     <Compile Include="Migrations\202002281458008_QuartzJobDb.Designer.cs">
       <DependentUpon>202002281458008_QuartzJobDb.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005292032209_DwapiSnaps.cs" />
+    <Compile Include="Migrations\202005292032209_DwapiSnaps.Designer.cs">
+      <DependentUpon>202005292032209_DwapiSnaps.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\LiveSeeder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -142,6 +146,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202002281458008_QuartzJobDb.resx">
       <DependentUpon>202002281458008_QuartzJobDb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005292032209_DwapiSnaps.resx">
+      <DependentUpon>202005292032209_DwapiSnaps.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Seed\MasterFacility.csv" />
   </ItemGroup>
