dapper plus initialization

--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -104,7 +104,13 @@
         <value>.\private$\dwapi.emr</value>
       </setting>
       <setting name="LiveSync" serializeAs="String">
-        <value>http://koske-mac:4777/stages/</value>
+        <value>http://localhost:4777/stages/</value>
+      </setting>
+      <setting name="Z_Dapper_Plus_LicenseName" serializeAs="String">
+        <value>1755;701-ThePalladiumGroup</value>
+      </setting>
+      <setting name="Z_Dapper_Plus_LicenseKey" serializeAs="String">
+        <value>9005d618-3965-8877-97a5-7a27cbb21c8f</value>
       </setting>
     </PalladiumDwh.DWapi.Properties.Settings>
   </applicationSettings>
@@ -127,7 +133,7 @@
     <add key="quartz.jobStore.useProperties" value="false" />
     <add key="quartz.jobStore.selectWithLockSQL" value="SELECT * FROM {0} LOCKS UPDLOCK WHERE LOCK_NAME = @ lockName" />
     <add key="quartz.dataSource.default.connectionStringName" value="QDWAPICentral" />
-    <add key="quartz.dataSource.default.connectionString" value="Data Source=.\KOSKE14;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True" />
+    <add key="quartz.dataSource.default.connectionString" value="Data Source=192.168.100.3\KOSKE14;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True" />
   </quartz>
   <system.codedom>
     <compilers>
