--- a/PalladiumDwh.DWapi/packages.config
+++ b/PalladiumDwh.DWapi/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net462" />
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net462" />
   <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
+  <package id="Dapper" version="1.50.4" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="jQuery" version="3.2.1" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
@@ -37,4 +38,5 @@
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net462" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net462" />
   <package id="WebGrease" version="1.6.0" targetFramework="net462" />
+  <package id="Z.Dapper.Plus" version="1.3.25" targetFramework="net462" />
 </packages>
