--- a/PalladiumDwh.Core/PalladiumDwh.Core.csproj
+++ b/PalladiumDwh.Core/PalladiumDwh.Core.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Exchange\MetricDto.cs" />
     <Compile Include="Exchange\StatDto.cs" />
     <Compile Include="Exchange\StatsDto.cs" />
+    <Compile Include="Interfaces\IActionRegisterRepository.cs" />
     <Compile Include="Interfaces\ILiveSyncService.cs" />
     <Compile Include="Interfaces\IMessagingReaderService.cs" />
     <Compile Include="Interfaces\IMessagingSenderService.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="Interfaces\IFacilityRepository.cs" />
     <Compile Include="Interfaces\IPatientVisitRepository.cs" />
     <Compile Include="Interfaces\ISyncService.cs" />
+    <Compile Include="Model\ActionRegister.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\LiveSyncService.cs" />
     <Compile Include="Services\MessagingReaderService.cs" />
