--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -112,6 +112,9 @@
       <setting name="Z_Dapper_Plus_LicenseKey" serializeAs="String">
         <value>9005d618-3965-8877-97a5-7a27cbb21c8f</value>
       </setting>
+      <setting name="AllowSnapshot" serializeAs="String">
+        <value>False</value>
+      </setting>
     </PalladiumDwh.DWapi.Properties.Settings>
   </applicationSettings>
   <quartz>
