--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -136,7 +136,7 @@
     <add key="quartz.jobStore.useProperties" value="false" />
     <add key="quartz.jobStore.selectWithLockSQL" value="SELECT * FROM {0} LOCKS UPDLOCK WHERE LOCK_NAME = @ lockName" />
     <add key="quartz.dataSource.default.connectionStringName" value="QDWAPICentral" />
-    <add key="quartz.dataSource.default.connectionString" value="Data Source=192.168.100.3\KOSKE14;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True" />
+    <add key="quartz.dataSource.default.connectionString" value="Data Source=koske-pc01\KOSKE14;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True" />
   </quartz>
   <system.codedom>
     <compilers>
