--- a/PalladiumDwh.DwapiService/database.config
+++ b/PalladiumDwh.DwapiService/database.config
@@ -1,7 +1,7 @@
 <connectionStrings>
   <add
     name="DWAPICentral"
-    connectionString="Data Source=.\KOSKE17;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=koske-pc01\KOSKE14;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
     />
 </connectionStrings>
