--- a/PalladiumDwh.DWapi/log4net.config
+++ b/PalladiumDwh.DWapi/log4net.config
@@ -14,7 +14,7 @@
     </layout>
   </appender>
   <root>
-    <level value="ALL" />
+    <level value="DEBUG" />
     <appender-ref ref="LogFileAppender" />
   </root>
 </log4net>
