adding indicator sync support

--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -104,7 +104,7 @@
         <value>.\private$\dwapi.emr</value>
       </setting>
       <setting name="LiveSync" serializeAs="String">
-        <value>http://localhost:4777/stages/</value>
+        <value>http://koske-mac:4777/stages/</value>
       </setting>
       <setting name="Z_Dapper_Plus_LicenseName" serializeAs="String">
         <value>1755;701-ThePalladiumGroup</value>
