--- a/PalladiumDwh.Core/PalladiumDwh.Core.csproj
+++ b/PalladiumDwh.Core/PalladiumDwh.Core.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exchange\DocketDto.cs" />
+    <Compile Include="Exchange\IndicatorDto.cs" />
     <Compile Include="Exchange\ManifestDto.cs" />
     <Compile Include="Exchange\MetricDto.cs" />
     <Compile Include="Exchange\StatDto.cs" />
