--- a/PalladiumDwh.DWapi/PalladiumDwh.DWapi.csproj
+++ b/PalladiumDwh.DWapi/PalladiumDwh.DWapi.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\FacilitiesController.cs" />
+    <Compile Include="Controllers\HandshakeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PatientAdverseEventsController.cs" />
     <Compile Include="Controllers\PatientArtController.cs" />
@@ -247,6 +248,7 @@
     <Compile Include="Helpers\Messenger.cs" />
     <Compile Include="Helpers\MessengerJob.cs" />
     <Compile Include="Helpers\MessengerScheduler.cs" />
+    <Compile Include="Models\HandshakeDto.cs" />
     <Compile Include="Models\Subscriber.cs" />
     <Compile Include="Models\Queues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
