--- a/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
+++ b/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
@@ -125,6 +125,10 @@
     <Compile Include="Migrations\202012060846587_ManifestUpload.Designer.cs">
       <DependentUpon>202012060846587_ManifestUpload.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102061007010_ManifestTag.cs" />
+    <Compile Include="Migrations\202102061007010_ManifestTag.Designer.cs">
+      <DependentUpon>202102061007010_ManifestTag.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\LiveSeeder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -164,6 +168,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012060846587_ManifestUpload.resx">
       <DependentUpon>202012060846587_ManifestUpload.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102061007010_ManifestTag.resx">
+      <DependentUpon>202102061007010_ManifestTag.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Seed\MasterFacility.csv" />
   </ItemGroup>
