--- a/PalladiumDwh.DwapiService/App.config
+++ b/PalladiumDwh.DwapiService/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <configSections>
     <section name="quartz" type="System.Configuration.NameValueSectionHandler, System, Version=1.0.5000.0,Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-    
+
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="PalladiumDWh.DwapiService.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -22,7 +22,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  
+
   <applicationSettings>
     <PalladiumDWh.DwapiService.Properties.Settings>
       <setting name="QueueName" serializeAs="String">
@@ -41,7 +41,7 @@
         <value>15</value>
       </setting>
       <setting name="LiveSync" serializeAs="String">
-        <value>http://koske-mac:4777/stages/</value>
+        <value>http://localhost:4777/stages/</value>
       </setting>
     </PalladiumDWh.DwapiService.Properties.Settings>
   </applicationSettings>
