extract summary addede to cargo

--- a/PalladiumDwh.DwapiService/App.config
+++ b/PalladiumDwh.DwapiService/App.config
@@ -41,7 +41,7 @@
         <value>15</value>
       </setting>
       <setting name="LiveSync" serializeAs="String">
-        <value>http://localhost:4777/stages/</value>
+        <value>http://koske-pc01:4777/stages/</value>
       </setting>
     </PalladiumDWh.DwapiService.Properties.Settings>
   </applicationSettings>
