--- a/PalladiumDwh.Shared/PalladiumDwh.Shared.csproj
+++ b/PalladiumDwh.Shared/PalladiumDwh.Shared.csproj
@@ -79,8 +79,26 @@
     <Compile Include="Extentions\TypeExtentions.cs" />
     <Compile Include="Interfaces\DTOs\IPatientAdverseEventExtractDTO.cs" />
     <Compile Include="Interfaces\Extracts\IAdverseEventExtract.cs" />
+    <Compile Include="Interfaces\Extracts\IAllergiesChronicIllness.cs" />
+    <Compile Include="Interfaces\Extracts\IContactListing.cs" />
+    <Compile Include="Interfaces\Extracts\IDepressionScreening.cs" />
+    <Compile Include="Interfaces\Extracts\IDrugAlcoholScreening.cs" />
+    <Compile Include="Interfaces\Extracts\IEnhancedAdherenceCounselling.cs" />
+    <Compile Include="Interfaces\Extracts\IGbvScreening.cs" />
+    <Compile Include="Interfaces\Extracts\IIPt.cs" />
+    <Compile Include="Interfaces\Extracts\IOtz.cs" />
+    <Compile Include="Interfaces\Extracts\IOvc.cs" />
     <Compile Include="Interfaces\IAdverseEvent.cs" />
+    <Compile Include="Interfaces\IAllergiesChronicIllness.cs" />
     <Compile Include="Interfaces\IClearPatientRecords.cs" />
+    <Compile Include="Interfaces\IContactListing.cs" />
+    <Compile Include="Interfaces\IDepressionScreening.cs" />
+    <Compile Include="Interfaces\IDrugAlcoholScreening.cs" />
+    <Compile Include="Interfaces\IEnhancedAdherenceCounselling.cs" />
+    <Compile Include="Interfaces\IGbvScreening.cs" />
+    <Compile Include="Interfaces\IIPt.cs" />
+    <Compile Include="Interfaces\IOtz.cs" />
+    <Compile Include="Interfaces\IOvc.cs" />
     <Compile Include="Interfaces\IPatient.cs" />
     <Compile Include="Interfaces\IBaseline.cs" />
     <Compile Include="Interfaces\IArt.cs" />
@@ -114,6 +132,15 @@
     <Compile Include="Model\DTO\PatientStatusExtractDTO.cs" />
     <Compile Include="Model\DTO\PatientVisitExtractDTO.cs" />
     <Compile Include="Model\ExrtactMap.cs" />
+    <Compile Include="Model\Extract\AllergiesChronicIllnessExtract.cs" />
+    <Compile Include="Model\Extract\ContactListingExtract.cs" />
+    <Compile Include="Model\Extract\DepressionScreeningExtract.cs" />
+    <Compile Include="Model\Extract\DrugAlcoholScreeningExtract.cs" />
+    <Compile Include="Model\Extract\EnhancedAdherenceCounsellingExtract.cs" />
+    <Compile Include="Model\Extract\GbvScreeningExtract.cs" />
+    <Compile Include="Model\Extract\IptExtract.cs" />
+    <Compile Include="Model\Extract\OtzExtract.cs" />
+    <Compile Include="Model\Extract\OvcExtract.cs" />
     <Compile Include="Model\Extract\PatientAdverseEventExtract.cs" />
     <Compile Include="Model\FacilityManifest.cs" />
     <Compile Include="Model\FacilityManifestCargo.cs" />
