--- a/PalladiumDwh.DWapi/database.config
+++ b/PalladiumDwh.DWapi/database.config
@@ -1,7 +1,7 @@
 <connectionStrings>
   <add
     name="DWAPICentral"
-    connectionString="Data Source=192.168.1.12;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=c0nstella;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=.\koske17;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
-    />
+  />
 </connectionStrings>
