new extracts update

--- a/PalladiumDwh.DwapiService/App.config
+++ b/PalladiumDwh.DwapiService/App.config
@@ -43,6 +43,12 @@
       <setting name="LiveSync" serializeAs="String">
         <value>http://koske-pc01:4777/stages/</value>
       </setting>
+      <setting name="ProfileCount" serializeAs="String">
+        <value>1000</value>
+      </setting>
+      <setting name="ProfileBatchCount" serializeAs="String">
+        <value>4</value>
+      </setting>
     </PalladiumDWh.DwapiService.Properties.Settings>
   </applicationSettings>
 
