ART and Visits review

--- a/PalladiumDwh.DwapiService/App.config
+++ b/PalladiumDwh.DwapiService/App.config
@@ -38,10 +38,10 @@
         <value>9005d618-3965-8877-97a5-7a27cbb21c8f</value>
       </setting>
       <setting name="QueuePoll" serializeAs="String">
-        <value>120</value>
+        <value>40</value>
       </setting>
       <setting name="LiveSync" serializeAs="String">
-        <value>http://koske-pc01:4777/stages/</value>
+        <value>http://localhost:4777/stages/</value>
       </setting>
       <setting name="ProfileCount" serializeAs="String">
         <value>1000</value>
